--- a/shared.css
+++ b/shared.css
@@ -5,9 +5,17 @@ body {
 
 ul{
     list-style: none;
-    padding: 0;
-    margin: 0;
+    width: 250px;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: flex-end;
 }
+li{
+    margin: 10px;
+    width: 100px;
+}
+
 #page-logo a {
     text-decoration: none;
     color: rgb(245, 243, 160);
@@ -16,4 +24,12 @@ ul{
     font-family: "Oleo Script", sans-serif;
     text-transform: uppercase;
     text-shadow: 1px 1px 2px black;
+}
+header{
+
+    margin:auto;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
