--- a/shared.css
+++ b/shared.css
@@ -5,17 +5,22 @@ body {
 
 ul{
     list-style: none;
-    width: 250px;
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    justify-content: flex-end;
+    padding: 0;
+    margin: 0;
+   
 }
 li{
     margin: 10px;
     width: 100px;
 }
-
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header ul{
+    display: flex;
+}
 #page-logo a {
     text-decoration: none;
     color: rgb(245, 243, 160);
@@ -25,11 +30,4 @@ li{
     text-transform: uppercase;
     text-shadow: 1px 1px 2px black;
 }
-header{
 
-    margin:auto;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
