--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   background-image: url(/places/ocean.jpg);
   background-position: center;
   background-size: cover;
-  ;
 }
 #centerbox {
   width: 600px;
@@ -13,7 +12,7 @@
   background-color: rgba(39, 35, 35, 0.8);
   box-shadow: 3px 6px 12px rgb(27, 23, 23);
   margin: 0 auto;
-  position:relative;
+  position: relative;
   top: 150px;
 }
 #centerbox h1 {
@@ -45,4 +44,16 @@
 #centerbox a:hover {
   background-color: rgb(230, 180, 16);
   box-shadow: 1px 4px 8px rgb(230, 180, 16);
+}
+
+#destinations {
+display: flex;
+width: 100%;
+margin: auto;
+
+}
+
+.destination img {
+  height: 200px;
+  flex-direction: row;
 }
