--- a/style.css
+++ b/style.css
@@ -47,13 +47,43 @@
 }
 
 #destinations {
-display: flex;
-width: 100%;
-margin: auto;
+  display: flex;/*lista rendezés.. nem tom hogy de vízszintesen*/
+  justify-content: center;/*középre a konténert*/
+  width: 90%;
+  margin: auto;
+  margin-bottom: 40px;
 
+}
+.destination{
+  padding: 10px;
+  margin: 0 20px;
 }
 
 .destination img {
   height: 200px;
-  flex-direction: row;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 1px 2px 8px rgb(27, 23, 23);
+  object-fit: cover; /*kép automéretezése a konténerbe(fill,contain,cover)*/
+  
+}
+
+h2{
+  text-align: center;
+  text-transform: uppercase;/*csupa nagybetű*/
+  font-size: 40px;
+  color: rgb(53, 64, 66);
+  margin: 24px 0;
+}
+p{
+  text-align: center;
+  font-size: 24px;
+}
+p b{
+  color: rgb(75, 174, 204);
+}
+#lower{
+  background-color: rgb(179, 226, 235);
+  padding: 24px 0;
+  background:linear-gradient(0deg, rgb(207, 241, 252), rgb(131, 193, 204))
 }
