--- a/shared.css
+++ b/shared.css
@@ -4,8 +4,7 @@ body {
 
 ul {
   list-style: none;
-  padding: 0;
-  
+
 }
 
 header {
@@ -25,8 +24,6 @@ header ul {
 header li {
   margin-right: 40px;
   margin-left: 20px;
-
-
 }
 header li a {
   text-decoration: none;
@@ -38,7 +35,7 @@ header li a:hover {
   text-decoration: none;
   color: black;
   background-color: rgb(245, 243, 160);
-  padding: 10px 5px;
+  padding: 5px 5px;
   border-radius: 15px;
 }
 #page-logo a {
@@ -49,4 +46,20 @@ header li a:hover {
   font-family: "Oleo Script", sans-serif;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px black;
+}
+footer {
+  background-color: black;
+  padding: 1px;
+}
+footer ul {
+  display: flex;
+  justify-content: center;
+}
+footer img {
+  width: 50px;
+  height: 50px;
+  margin: 0, 20px;
+}
+footer li {
+  padding: 0 20px;
 }
