--- a/shared.css
+++ b/shared.css
@@ -1,10 +1,12 @@
 body {
   font-family: "Quicksand", sans-serif;
+  margin: 0;
 }
 
 ul {
   list-style: none;
-
+  margin: 0;
+  padding: 0;
 }
 
 header {
@@ -49,17 +51,18 @@ header li a:hover {
 }
 footer {
   background-color: black;
-  padding: 1px;
+  padding: 20px 0;
 }
 footer ul {
   display: flex;
   justify-content: center;
 }
 footer img {
-  width: 50px;
-  height: 50px;
-  margin: 0, 20px;
+  width: 100%;
+  height: 100%;
 }
 footer li {
-  padding: 0 20px;
+  margin: 0 30px;
+  width: 60px;
+  height: 60px;
 }
