added content and properties the destinaton page

--- a/places.css
+++ b/places.css
@@ -1,15 +1,55 @@
 body {
-  background: linear-gradient(45deg, rgb(110, 110, 110), rgb(92, 87, 87));
+  background: linear-gradient(45deg, rgb(221, 221, 221), rgb(46, 45, 45));
+  color: rgb(66, 63, 63)
 }
 
 header {
   position: static;
 }
-main ul{
-    width: 800px;
-    margin: 0 auto;
+main ul {
+  width: 1500px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+}
+main li {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 main li img {
-  width: 300px;
+  width: 100%;
   height: 280px;
+  object-fit:cover;
+}
+.content {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+main h2 {
+  margin: 0;
+}
+
+.info{
+    text-align: right;
+}
+
+.info a{
+    color: rgb(74, 202, 235);
+    text-decoration: none;
+    padding: 6px;
+    border-radius: 4px;
+}
+
+.info a:hover{
+    background-color: rgba(135, 247, 247, 0.404);
+
+}
+.venice{
+    grid-template-columns: 2fr;
 }
